assets/scss/main.scss
/* ... */
.rainfall__border {
  position: fixed;
  margin-left: 2px;
  margin-top: 1px;
  border-radius: 100%;
  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5);
  transform: rotateY(0);
  z-index: 100 !important;
}

@for $i from 1 through 100 {
  $x: random();
  $y: random();

  $drop-width: 5px + random(11);
  $drop-stretch: 0.7+ (random() * 0.5);
  $drop-delay: (random() * 2.5) + 1;
  $drop-height: $drop-width * $drop-stretch;

  .rainfall__raindrop:nth-child(#{$i}) {
    left: $x * 100vw;
    top: $y * 100vh;

    width: $drop-width;
    height: $drop-height;
    background-position: percentage($x) percentage($y);
    animation: #{$drop-delay}s rainfall__falling 0.3s ease-in infinite;
  }

  .rainfall__border:nth-child(#{$i}) {
    left: $x * 100vw;
    top: $y * 100vh;

    width: $drop-width - 4;
    height: $drop-height;
    animation: #{$drop-delay}s rainfall__falling 0.3s ease-in infinite;
  }
}

@keyframes rainfall__falling {
  from {
  }
  to {
    transform: translateY(500px);
  }
}

@media (prefers-reduced-motion: reduce) {
  .borders,
  .drops {
    display: none;
  }
}

.pf-x-u-text--center {
  text-align: center;
}

.twitterfeed__tweets__content img {
  @extend .pf-u-mt-md;
}

.pf-x-c-project__icon {
  @extend .pf-u-mr-sm;
  max-width: 2rem;
}

.pf-x-c-name {
  text-align: center;
  word-break: keep-all;
}

.twitterfeed {
  margin-top: -1rem;
}

a.pf-c-button.pf-m-primary,
.pf-x-u-hoverable {
  transition: all 0.2s ease-in-out;

  &:hover,
  &:focus {
    transform: scale(1.035);
  }

  &--rotate {
    &:hover,
    &:focus {
      transform: rotate(-5deg) scale(1.1);
    }
  }
}

.pf-x-u-hoverable-parent--rotate {
  > img {
    transition: all 0.2s ease-in-out;
  }

  &:hover,
  &:focus {
    > img {
      transform: rotate(-5deg) scale(1.1);
    }
  }
}

.spotifystatus {
  border: 1px solid var(--pf-global--Color--dark-100);
  @media (prefers-color-scheme: dark) {
    border-color: var(--pf-global--Color--light-100);
  }

  border-radius: $pf-global--BorderRadius--sm;

  .pf-x-spotify {
    max-width: 40px;
    height: 100%;
    object-fit: cover;
  }
}

